[tool.poetry]
name = "pkg_for_practice"
version = "0.1.2"
description = "Practice package!"
authors = ["Michaela Flum"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^4.3.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
